# thrust

./: .gitignore  Cargo.toml  README.md  a.rs  a.rs.txt  gcd.rs  memo  rust-toolchain.toml  simple.rs  simple.rs.txt  simple_mut.rs  std.rs  swap.rs
.devcontainer/: Dockerfile  devcontainer.json
.github/actions/setup-z3/: action.yml
.github/workflows/: ci.yml  docs.yml
.tmp/: thrust_output.smt2
src/: analyze.rs  annot.rs  chc.rs  error.rs  index.rs  lib.rs  main.rs  pretty.rs  refine.rs  rty.rs
src/analyze/: annot.rs  annot_fn.rs  basic_block.rs  crate_.rs  did_cache.rs  function.rs  local_def.rs  reconstruct_slice_indexing.rs
src/analyze/basic_block/: drop_point.rs  visitor.rs
src/analyze/reconstruct_slice_indexing/: tests.rs
src/chc/: clause_builder.rs  debug.rs  format_context.rs  hoice.rs  seq_simplify.rs  smtlib2.rs  solver.rs  unbox.rs  z3.rs
src/chc/smtlib2/: convention.rs
src/refine/: basic_block.rs  body.rs  env.rs  matcher_pred.rs  template.rs
src/rty/: clause_builder.rs  params.rs  subtyping.rs  template.rs
tests/: thrust-pcsat-wrapper  ui.rs
tests/lambda-chc/: README.md  check_nonrec.py  needs_chc_loop_count.rs  needs_chc_loop_count.smt2  needs_chc_loop_index.rs  needs_chc_loop_index.smt2  needs_chc_mut_walk.rs  needs_chc_mut_walk.smt2  needs_chc_recursive_len.rs  needs_chc_recursive_len.smt2  needs_chc_recursive_nth.rs  needs_chc_recursive_nth.smt2  soundness_check.py  split_first_mut.rs  split_first_mut.smt2  split_first_mut_mutation.rs  split_first_mut_mutation.smt2
tests/ui/annot-error/: array_index_literal_int.rs  array_index_literal_int_workaround.rs  formula_fn_capture_local.rs  invariant_context_self_trait_bound.rs  invariant_context_self_trait_bound_workaround.rs  invariant_context_trait_method.rs  invariant_context_trait_method_workaround.rs
tests/ui/fail/: add.rs  adt.rs  adt_discr.rs  adt_mut.rs  adt_poly_fn_mono.rs  adt_poly_fn_poly.rs  adt_poly_ref.rs  adt_simple.rs  adt_unit_struct.rs  annot.rs  annot_exists.rs  (+165 more)
thrust-macros/: Cargo.toml
thrust-macros/src/: closure.rs  context.rs  fn_outer_item.rs  formula.rs  formula_fn_type_lowering.rs  invariant.rs  invariant_context.rs  lib.rs  pre_post.rs  refine.rs  rty.rs  spec.rs
z3-spacer-regression/: README.md  z3_4.16_spacer_regression_repro.smt2
(+211 files in other folders)
