[package]
name = "thrust"
version = "0.1.0"
authors = ["coord_e <me@coord-e.com>"]
edition = "2021"

[[bin]]
name = "thrust-rustc"
path = "src/main.rs"
test = false

[lib]
# TODO: why is this necessary?
test = false

[[test]]
name = "ui"
harness = false

[dependencies]
anyhow = "1.0.100"
pretty = { version = "0.12.5", features = ["termcolor"] }
tempfile = "3.24.0"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
process_control = "5.0.0"

[dev-dependencies]
ui_test = "0.23.0"

[package.metadata.rust-analyzer]
rustc_private = true
