[workspace]
members = [".", "thrust-macros"]
resolver = "2"

[package]
name = "thrust"
version = "0.1.0"
authors = ["coord_e <me@coord-e.com>"]
edition = "2021"

[[bin]]
name = "thrust-rustc"
path = "src/main.rs"
test = false

[lib]
# TODO: why is this necessary?
test = false

[[test]]
name = "ui"
harness = false

[dependencies]
# Workaround until thrust supports invocation via cargo: adding thrust-macros as
# a dependency ensures cargo builds (and rebuilds) it alongside thrust. It is not
# used as a proc-macro here; the dylib is loaded at runtime via --extern.
thrust-macros = { path = "thrust-macros" }

anyhow = "1.0.102"
pretty = { version = "0.12.5", features = ["termcolor"] }
tempfile = "3.27.0"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
process_control = "5.2.0"

[dev-dependencies]
ui_test = "0.23.0"

[package.metadata.rust-analyzer]
rustc_private = true
